tests/snapshots/golden__ref_rewards_distributed.snap
---
source: tests/golden.rs
expression: out
---
[
  {
    "op_id": "00000000-0000-0000-0000-000000000000",
    "factory_op_id": 0,
    "event_hash": "deadbeef#0#lend_ref_rewards_distributed",
    "chain_id": 0,
    "event_type": "ref_rewards_distributed",
    "user_address": null,
    "block_number": 12345,
    "data": {
      "epoch": "3",
      "tx_hash": "deadbeef#0",
      "usdc_amount": "800"
    },
    "created_at": "2023-11-14T22:13:20Z"
  }
]
